--- a/src/app/_pages/contact/contact.component.html
+++ b/src/app/_pages/contact/contact.component.html
@@ -40,7 +40,7 @@
           <div class="col-md-5 col-lg-4  mb-13">
             <div class="single-contact-widget d-flex">
               <div class="widget-icon circle-sm-2 bg-white gr-text-6 text-primary mr-7">
-                <i class="icon icon-phone-2"></i>
+                <i class="icon icon-phone-2 text-info"></i>
               </div>
               <div class="widget-text">
                 <h3 class="gr-text-6 mb-5">Call us</h3>
@@ -54,7 +54,7 @@
           <div class="col-md-5 col-lg-4 mb-13">
             <div class="single-contact-widget d-flex">
               <div class="widget-icon circle-sm-2 bg-white gr-text-6 text-primary mr-7">
-                <i class="icon icon-email-83"></i>
+                <i class="icon icon-email-83 text-info"></i>
               </div>
               <div class="widget-text">
                 <h3 class="gr-text-6 mb-5">Email us</h3>
@@ -68,7 +68,7 @@
           <div class="col-md-5 col-lg-4 mb-13">
             <div class="single-contact-widget d-flex">
               <div class="widget-icon circle-sm-2 bg-white gr-text-6 text-primary mr-7">
-                <i class="icon icon-pin-3-2"></i>
+                <i class="icon icon-pin-3-2 text-info"></i>
               </div>
               <div class="widget-text">
                 <h3 class="gr-text-6 mb-5">Visit us</h3>
@@ -138,7 +138,7 @@
               </div>
               <div class="col-xs-3">
                 <div class="form-group button-block mt-3 ">
-                  <button class="form-btn btn btn-primary w-100">Send</button>
+                  <button class="form-btn btn btn-info w-100">Send</button>
                 </div>
               </div>
             </div>
