--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -164,7 +164,7 @@
             </p>
             <div class="col-md-6 col-lg-12" data-aos="fade-left" data-aos-duration="900" data-aos-once="true">
               <div class="single-widget my-9 media">
-                <div class="media-icon circle-sm bg-blue mr-8">
+                <div class="media-icon circle-sm mr-8">
                   <span class="count text-white gr-text-9">1</span>
                 </div>
                 <div class="media-body">
@@ -174,7 +174,7 @@
             </div>
             <div class="col-md-6 col-lg-12" data-aos="fade-left" data-aos-duration="900" data-aos-once="true">
               <div class="single-widget my-9 media">
-                <div class="media-icon circle-sm bg-blue mr-8">
+                <div class="media-icon circle-sm mr-8">
                   <span class="count text-white gr-text-9">2</span>
                 </div>
                 <div class="media-body">
@@ -184,7 +184,7 @@
             </div>
             <div class="col-md-6 col-lg-12" data-aos="fade-left" data-aos-duration="900" data-aos-once="true">
               <div class="single-widget my-9 media">
-                <div class="media-icon circle-sm bg-blue mr-8">
+                <div class="media-icon circle-sm mr-8">
                   <span class="count text-white gr-text-9">3</span>
                 </div>
                 <div class="media-body">
@@ -195,7 +195,7 @@
             </div>
             <div class="col-md-6 col-lg-12" data-aos="fade-left" data-aos-duration="900" data-aos-once="true">
               <div class="single-widget my-9 media">
-                <div class="media-icon circle-sm bg-blue mr-8">
+                <div class="media-icon circle-sm mr-8">
                   <span class="count text-white gr-text-9">4</span>
                 </div>
                 <div class="media-body">
@@ -404,7 +404,7 @@
                   placeholder="Enter your email">
               </div>
               <div class="button-block">
-                <button class="form-btn btn btn-primary w-100">Subscribe</button>
+                <button class="form-btn btn btn-info w-100">Subscribe</button>
               </div>
             </form>
           </div>
