--- a/src/app/_pages/signup-nurse/signup-nurse.component.html
+++ b/src/app/_pages/signup-nurse/signup-nurse.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
 
-
 <div class="inner-banner pt-29 pb-md-11 bg-default-2">
   <div class="container">
     <div class="row  justify-content-center pt-5">
@@ -14,14 +13,12 @@
   </div>
 </div>
 
-
-
 <div class=" pb-5 pb-md-33 bg-default-2 ">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12">
         <div class="login-form bg-white border-gray-3 px-8 pt-8 pb-9 px-sm-11 py-sm-11 shadow-1 rounded-10">
-          <form [formGroup]="signup" (ngSubmit)="onSubmit()" *ngIf="isLoaded">
+          <form [formGroup]="signup" (ngSubmit)="onSubmit()" *ngIf="isLoaded" enctype="multipart/form-data" >
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group mb-7">
@@ -43,8 +40,8 @@
                     <div *ngIf="f.email.errors.pattern">Email must be valid.</div>
                   </div>
                   <div *ngIf="emailExists" class="mb-2 text-danger">
-                  <div>An account with this email already.</div>
-                </div>
+                    <div>An account with this email already.</div>
+                  </div>
 
                 </div>
               </div>
@@ -60,6 +57,15 @@
               </div>
               <div class="col-md-6">
                 <div class="form-group mb-7">
+                  <label for="dob" class="gr-text-11 font-weight-bold text-blackish-blue">Date of Birth</label>
+                  <input formControlName="dob" class="form-control gr-text-11 border" type="date">
+                  <div *ngIf="submitted && f.dob.errors" class="mb-2 text-danger">
+                    <div *ngIf="f.dob.errors.required">Date of Birth is required.</div>
+                  </div>
+                </div>
+              </div>
+              <!-- <div class="col-md-6">
+                <div class="form-group mb-7">
                   <label for="staff_id" class="gr-text-11 font-weight-bold text-blackish-blue">Register as</label>
                   <select formControlName="staff_id" class="form-control gr-text-11 border" name="staff_id">
                     <option value="" disabled selected>Please select one?</option>
@@ -71,52 +77,118 @@
                     <div *ngIf="f.staff_id.errors.required">Staff type is required.</div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-6">
+              </div> -->
+              <div class="col-md-12">
                 <div class="form-group mb-7">
-                  <label for="phone" class="gr-text-11 font-weight-bold text-blackish-blue">Password</label>
+
+                  <div class="hiddenCB">
+                    <label class="gr-text-11 font-weight-bold text-blackish-blue">Register as:</label>
+<br/>
+                    <div *ngFor="let CountryData of staffs; let i=index" class="regAs col-md-12">
+                      <input type="checkbox" name="choice" id="{{ 'wave' + i }}" [value]="CountryData.id"
+                        (change)="onCheckboxChange($event)" /><label for="{{ 'wave' + i }}">{{CountryData.type}}</label>
+
+                      <!-- <label>
+                    <input type="checkbox" [value]="CountryData.id" (change)="onCheckboxChange($event)" />
+                    {{CountryData.type}}
+                  </label> -->
+                    </div>
+                    <div *ngIf="submitted && noStaff_id" class="mb-2 text-danger">
+                      <br/>
+                      At least one is required
+                    </div>
+
+
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-12">
+                <div class="form-group mb-7">
+
+                  <!-- <label for="phone" class="gr-text-11 font-weight-bold text-blackish-blue">Password</label>
                   <input formControlName="password" class="form-control gr-text-11 border" type="password"
                     placeholder="i.e. sdfG@_gt">
                   <div *ngIf="submitted && f.password.errors" class="mb-2 text-danger">
                     <div *ngIf="f.password.errors.required">Password is required</div>
                     <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+                  </div> -->
+                  <label for="picture" class="gr-text-11 font-weight-bold text-blackish-blue">Profile Picture</label>
+
+                  <!-- Select File -->
+                  <input class="form-control gr-text-11 border" type="file" accept="image/*" (change)="handleFileInput($event.target.files)" />
+                  <!-- Image Preview -->
+                  <div class="imagePreview" *ngIf="imageURL && imageURL !== ''">
+                    <img [src]="imageURL" [alt]="signup.value.full_name">
+                  </div>
+                  <div *ngIf="submitted && f.picture.errors" class="mb-2 text-danger">
+                    <div *ngIf="f.picture.errors.required">Picture is required</div>
+                    <div *ngIf="f.picture.errors.fileMaxSize">Please upload an image less than 5 Mb</div>
+                  </div>
+
+              </div>
+            </div>
+            <!-- <div class="col-md-6">
+                <div class="form-group mb-7 hiddenCB">
+                  <label for="staff_id" class="gr-text-11 font-weight-bold text-blackish-blue">Register as</label>
+                  <select formControlName="staff_id" class="form-control gr-text-11 border" name="staff_id">
+                    <option value="" disabled selected>Please select one?</option>
+                    <option *ngFor="let cat of staffs" value="{{cat.id}}">
+                      {{cat.type}}
+                      </option>
+                  </select>
+                  <div *ngIf="submitted && f.staff_id.errors" class="mb-2 text-danger">
+                    <div *ngIf="f.staff_id.errors.required">Staff type is required.</div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group mb-7">
-                  <label for="subject" class="gr-text-11 font-weight-bold text-blackish-blue">Confirm password</label>
-                  <input formControlName="confirmpassword" class="form-control gr-text-11 border" type="password"
-                    placeholder="sdfG@_gt">
-                  <div *ngIf="submitted && f.confirmpassword.errors" class="mb-2 text-danger">
-                    <div *ngIf="f.confirmpassword.errors.required">Password is required</div>
-                    <div *ngIf="f.confirmpassword.errors.mustMatch">Passwords must match</div>
-                  </div>
+              </div> -->
+            <div class="col-md-6">
+              <div class="form-group mb-7">
+                <label for="phone" class="gr-text-11 font-weight-bold text-blackish-blue">Password</label>
+                <input formControlName="password" class="form-control gr-text-11 border" type="password"
+                  placeholder="i.e. sdfG@_gt">
+                <div *ngIf="submitted && f.password.errors" class="mb-2 text-danger">
+                  <div *ngIf="f.password.errors.required">Password is required</div>
+                  <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
                 </div>
               </div>
-              <!-- <div class="col-md-6">
+            </div>
+            <div class="col-md-6">
+              <div class="form-group mb-7">
+                <label for="subject" class="gr-text-11 font-weight-bold text-blackish-blue">Confirm password</label>
+                <input formControlName="confirmpassword" class="form-control gr-text-11 border" type="password"
+                  placeholder="sdfG@_gt">
+                <div *ngIf="submitted && f.confirmpassword.errors" class="mb-2 text-danger">
+                  <div *ngIf="f.confirmpassword.errors.required">Password is required</div>
+                  <div *ngIf="f.confirmpassword.errors.mustMatch">Passwords must match</div>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="col-md-6">
                 <input formControlName="role" class="form-control gr-text-11 border" type="text"
                 placeholder="i.e. +44-07444831232" value="2" >
               </div> -->
 
-              <div class="col-xs-3">
-                <div class="form-group button-block mt-3 ">
-                  <button class="form-btn btn btn-primary w-100">Register</button>
+            <div class="col-xs-3">
+              <div class="form-group button-block mt-3 ">
+                <div class="spinner-grow text-info" role="status" *ngIf="loading">
+                  <span class="sr-only">Loading...</span>
                 </div>
-
-              </div>
-              <div class="col-xs-3">
-                <div class="form-group button-block mt-3 ">
-                  <span (click)="clear()" class="form-btn btn btn-primary w-100">Reset Form</span>
-                </div>
+                <button *ngIf="!loading" class="form-btn btn btn-info w-100">Register</button>
               </div>
 
             </div>
-          </form>
+            <div class="col-xs-3">
+              <div class="form-group button-block mt-3 ">
+                <span *ngIf="!loading" (click)="clear()" class="form-btn btn btn-danger w-100">Reset Form</span>
+              </div>
+            </div>
+
         </div>
+        </form>
       </div>
     </div>
   </div>
+</div>
 </div>
 
 <app-footer></app-footer>
