--- a/src/app/_components/careerform/careerform.component.html
+++ b/src/app/_components/careerform/careerform.component.html
@@ -78,7 +78,7 @@
               </div>
               <div class="col-xs-3">
                 <div class="form-group button-block mt-3 ">
-                  <button class="form-btn btn btn-primary w-100">Apply</button>
+                  <button class="form-btn btn btn-info w-100">Apply</button>
                 </div>
               </div>
             </div>
