--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -63,8 +63,8 @@
           <div class="single-footer mb-13 mb-lg-9">
             <p class="footer-title gr-text-11 mb-7">Drop a line</p>
             <ul class="footer-list list-unstyled">
-              <li class="py-2"><a class="gr-text-9 text-primary font-weight-bold hover-underline active" href="mailto:booking@toothpickdentalstaff.com">booking@toothpickdentalstaff.com</a></li>
-              <li class="py-2"><a class="gr-text-9 text-primary font-weight-bold hover-underline active" href="tel:+44 07444831232">+44 07444831232</a></li>
+              <li class="py-2"><a class="gr-text-9 text-info font-weight-bold hover-underline active" href="mailto:booking@toothpickdentalstaff.com">booking@toothpickdentalstaff.com</a></li>
+              <li class="py-2"><a class="gr-text-9 text-info font-weight-bold hover-underline active" href="tel:+44 07444831232">+44 07444831232</a></li>
             </ul>
           </div>
         </div>
@@ -76,7 +76,7 @@
           <h4>Toothpick Dental Staff</h4>
           <p class="copyright-text gr-text-11 mb-6 mb-lg-0 gr-text-color-opacity text-center text-lg-left">
             © 2022 Copyright, All Right Reserved,
-            <br/> Build by <a href="https://bitmosys.com/">Bitmosys Labs</a>
+            <br/> Build by <a class="text-info" href="https://bitmosys.com/">Bitmosys Labs</a>
             <!-- <i class="icon icon-heart-2-2 text-green align-middle ml-2"></i> -->
           </p>
         </div>
