--- a/src/app/_pages/signin/signin.component.html
+++ b/src/app/_pages/signin/signin.component.html
@@ -71,7 +71,7 @@
             </div> -->
                 <div class="form-group mb-7">
                   <label for="terms-check" class="gr-check-input mb-7 d-flex">
-                    <input class="d-none " type="checkbox" id="terms-check">
+                    <input formControlName="remember_token" class="d-none " type="checkbox" id="terms-check">
                     <span class="checkbox mt-1 mr-2"></span>
                     <p class="gr-text-11 text-blackish-blue mb-0">Remember me</p>
                   </label>
