--- a/src/app/_pages/contact/contact.component.html
+++ b/src/app/_pages/contact/contact.component.html
@@ -128,7 +128,7 @@
               <div class="col-md-12">
                 <div class="form-group mb-7">
                   <label for="message" class="gr-text-11 font-weight-bold text-blackish-blue">Message</label>
-                  <textarea name="textblock" id="message" formControlName="contact_message"
+                  <textarea placeholder="Type your message here..." name="textblock" id="message" formControlName="contact_message"
                     class="form-control gr-text-11 border-gray-3 gr-textarea-height"></textarea>
                   <div *ngIf="submitted && c.contact_message.errors" class=" mb-2 text-danger">
                     <div *ngIf="c.contact_message.errors.required">Message is required</div>
@@ -141,6 +141,12 @@
                   <button class="form-btn btn btn-info w-100">Send</button>
                 </div>
               </div>
+              <div class="col-xs-3">
+                <div class="form-group button-block mt-3 ">
+                  <span *ngIf="!loading" (click)="clear()" class="form-btn btn btn-danger w-100">Reset Form</span>
+                </div>
+              </div>
+
             </div>
           </form>
         </div>
