image size fixed

--- a/src/app/_pages/verifyemail/verifyemail.component.html
+++ b/src/app/_pages/verifyemail/verifyemail.component.html
@@ -65,7 +65,7 @@
                   <div class="spinner-grow text-info" role="status" *ngIf="loading">
                     <span class="sr-only">Loading...</span>
                   </div>
-                  <button *ngIf="!loading" class="form-btn btn btn-primary gr-hover-y w-100">Verify</button>
+                  <button *ngIf="!loading" class="form-btn btn btn-info gr-hover-y w-100">Verify</button>
                 </div>
               </form>
             </div>
